--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,59 @@
 
 /*BODY STUFF*/
 body {
-    margin-left: 25px ;
-
+    margin-left: 100px ;
+    background-color: #FAF0DB;
+    color: #502419;
+    font-family: "Koh Santepheap", serif;
+    font-weight: 400;
 }
 p{
-    margin-right: 250px ;
+    margin-right: 300px ;
+    font-size: 1.5em;
+    line-height: 1.6;
 }
+h1{
+    margin-top: 130px;
+    margin-right: 0px;
+    padding-right: 200px;
+    font-family: 'Shrikhand', serif;
+    font-weight: 500;
+    font-size: 4.25em ;
+    color: #BF3100;
+    display: flex;
+    justify-content: space-between;
+}
+h2{
+    margin-top: -40px;
+    margin-bottom: -20px;
+    font-family: "Koh Santepheap", serif;
+    font-weight: 700;
+    color: #EC9F05;
+    font-size: 2.5em;
+    position: relative;
+
+}
+.Portrait{
+    
+    padding: 0;
+    margin-right: -150px;
+    margin-bottom: 0;
+    margin-top: -50px;
+    max-width: 100%;
+    width: 250px;
+    border: 0;
+    height: auto;
+    
+}
+
+
+/* LINES */
+.Line1{
+    margin-top: 100px;
+    margin-left: -100px;
+    position: absolute;
+}
+
 
 
 /* HEADER STUFF */
@@ -14,13 +61,19 @@ p{
     display: flex;                
     justify-content: space-between; 
     padding: 20px 5%;             
+    background-color: #FAF0DB;
     
-    
+}
+.ROY{
+    margin-right: -20px;
+    width: 1490px;
+    float: right;
 }
 
 .logo { /*BIG LANDON OLESKY TEXT*/
-    
-    
+    font-size: .8rem + 0.2vw;
+    margin-left: -110px;
+    font-family: 'Shrikhand', serif;
 }
 
 .page-header ul {
@@ -33,5 +86,17 @@ p{
 .page-header li {
     margin-left: 30px;            
     cursor: pointer;
-    text-align: center;           
+    text-align: center; 
+    font-family: "Koh Santepheap", serif;
+    font-weight: 300;
+}
+
+a {
+    text-decoration: none;
+    color: #502419;
+}
+
+img {
+    /*display: block;*/
+    
 }
