--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 
 /*BODY STUFF*/
 body {
-    margin-left: 100px ;
+    margin-left: 5vw ;
     background-color: #FAF0DB;
     color: #502419;
     font-family: "Koh Santepheap", serif;
     font-weight: 400;
 }
 p{
-    margin-right: 300px ;
+    margin-right: 30vw ;
     font-size: 1.5em;
-    line-height: 1.6;
+    line-height: 1.8;
+    display: flex;
+}
+p img{
+
 }
 h1{
     margin-top: 130px;
@@ -26,6 +30,7 @@ h1{
 h2{
     margin-top: -40px;
     margin-bottom: -20px;
+    margin-right: 0px;
     font-family: "Koh Santepheap", serif;
     font-weight: 700;
     color: #EC9F05;
@@ -36,7 +41,7 @@ h2{
 .Portrait{
     
     padding: 0;
-    margin-right: -150px;
+    margin-right: -10px;
     margin-bottom: 0;
     margin-top: -50px;
     max-width: 100%;
@@ -66,13 +71,16 @@ h2{
 }
 .ROY{
     margin-right: -20px;
-    width: 1490px;
+    width: 103%;
     float: right;
+    height: 100%;
+    min-width: 100%;
+    
 }
 
 .logo { /*BIG LANDON OLESKY TEXT*/
     font-size: .8rem + 0.2vw;
-    margin-left: -110px;
+    margin-left: -20px;
     font-family: 'Shrikhand', serif;
 }
 
@@ -94,9 +102,41 @@ h2{
 a {
     text-decoration: none;
     color: #502419;
+    
 }
 
 img {
-    /*display: block;*/
+    /* display: block; */
     
 }
+
+
+
+
+@media screen and (max-width: 768px) {
+        
+        body {
+            margin-left: 50px;
+        }
+        .logo{
+            margin-left: -20px;
+        }
+        h1 {
+            font-size: 2.5em; /* Example: adjust heading size */
+            margin-right: -180px;
+        }
+        h2{
+            margin-top: -10px;
+            font-size: 1.8em; /* Example: adjust subheading size */
+            margin-right: 0px;
+        }
+        .Portrait{
+            
+            width: 125px;
+        }
+        p {
+            margin-top: 30px;
+            font-size: 1.2em; /* Example: adjust paragraph size */
+            margin-right: 50px;
+        }
+    }
