--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,12 @@ body {
     font-family: "Koh Santepheap", serif;
     font-weight: 400;
 }
+.About p{
+    margin-right: 45vw;
+}
 p{
     margin-right: 30vw ;
+    margin-bottom: 20px;
     font-size: 1.5em;
     line-height: 1.8;
     display: flex;
@@ -28,7 +32,7 @@ h1{
     justify-content: space-between;
 }
 h2{
-    margin-top: -40px;
+    margin-top: 0px;
     margin-bottom: -20px;
     margin-right: 0px;
     font-family: "Koh Santepheap", serif;
@@ -38,6 +42,7 @@ h2{
     position: relative;
 
 }
+
 .Portrait{
     
     padding: 0;
@@ -48,6 +53,21 @@ h2{
     width: 250px;
     border: 0;
     height: auto;
+    
+}
+.Resume{
+    
+    position: absolute;
+    float: right;
+    right: 0;
+    width: 42vw;
+    margin-right: 20px;
+    
+}
+.Resume2{
+    
+    display: none;
+    width: 80vw;
     
 }
 
@@ -110,10 +130,81 @@ img {
     
 }
 
+.projects-container {
+    display: flex;
+    gap: 40px;
+    margin-top: 60px;
+    margin-right: 5vw;
+    flex-wrap: wrap;
+}
+
+.project-box {
+    background-color: rgba(236, 159, 5, 0.15);
+    border-radius: 15px;
+    padding: 30px;
+    flex: 1;
+    min-width: 300px;
+    max-width: calc(50% - 20px);
+}
+
+.project-box:first-child {
+    background-color: rgba(250, 184, 192, 0.4);
+}
+
+.project-box:last-child {
+    background-color: rgba(236, 159, 5, 0.15);
+}
+
+.project-title {
+    font-family: "Koh Santepheap", serif;
+    font-weight: 700;
+    font-size: 2em;
+    color: #502419;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.project-content {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 20px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.project-image {
+    width: calc(50% - 8px);
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+.project-image-single {
+    width: 60%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+.unity-logo {
+    
+    width: 48%;
+    height: auto;
+    object-fit: contain;
+}
+
+.project-description {
+    font-size: 1.2em;
+    line-height: 1.6;
+    margin: 0;
+    margin-right: 0;
+}
 
 
 
-@media screen and (max-width: 768px) {
+
+
+@media screen and (max-width: 868px) {
         
         body {
             margin-left: 50px;
@@ -122,6 +213,7 @@ img {
             margin-left: -20px;
         }
         h1 {
+            margin-top: 80px;
             font-size: 2.5em; /* Example: adjust heading size */
             margin-right: -180px;
         }
@@ -139,4 +231,45 @@ img {
             font-size: 1.2em; /* Example: adjust paragraph size */
             margin-right: 50px;
         }
+        .About img.Resume{
+            display: none;
+        }
+        .About p{
+            margin-right: 5vw;
+            display: absolute;
+            float: none;
+            right: 0;
+        }
+        .Resume2{
+            display:flex;
+            padding: 0;
+            margin-right: 5vw;
+            margin-left: 5vw;
+            max-width: 100%;
+            width: 80vw;
+        }
+        
+    .projects-container {
+        flex-direction: column;
+        margin-right: 50px;
     }
+    
+    .project-box {
+        max-width: 100%;
+    }
+    
+    .project-image,
+    .project-image-single,
+    .unity-logo {
+        width: 100%;
+    }
+    
+    .project-title {
+        font-size: 1.5em;
+    }
+        
+        
+    }
+
+
+
